Replace Collectors.toList() with ImmutableList
Collectors.toList() is a bad API because it neither guarantees
mutability nor immutability. So all callers must not mutate the result,
but then we can also use ImmutableList.

One difference is that ImmutableList does not accept null values,
but I checked all cases and null values should never occur.

git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@36669 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c